# ameba-mcp

./: README.md  pyproject.toml
api_docs/: connection.md  hems.md  kvs.md  snapshot.md  wifi.md
doc/hass_setup/: README.md  atcmd_over_mqtt.diff
src/ameba_mcp/: __init__.py  server.py
src/ameba_mcp/modules/: __init__.py  connection_manager.py  connection_module.py  feature_module.py  hems_module.py  kvs_module.py  snapshot_module.py  wifi_module.py
