[project]
name = "ameba-mcp"
version = "0.1.0"
description = "MCP Server for Realtek Ameba IoT Series Device Control"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "mcp>=1.2.0",
    "setuptools>=80.9.0",
    "typing-extensions>=4.13.2",
    "wheel>=0.45.1",
    "pyserial"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
ameba-mcp = "ameba_mcp.server:main"